[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Scripts/MouseSpawnerLogic.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1152, -128, 0, 0, 0, 0, 1152, 704, 0, 0, 0, 0, -128, 704, 0, 0, 0, 0, -128, -128, 0, 0, 0, 0, 1152, -128 )
}

[node name="MouseSpawner" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 500.0

[node name="MousePath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MouseSpawnLocation" type="PathFollow2D" parent="MousePath"]
position = Vector2( 1152, -128 )
rotation = 1.5708

[node name="MouseHomeLocation" type="PathFollow2D" parent="MousePath"]
position = Vector2( 1152, -128 )
rotation = 1.5708
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
